trunk/Archive2/17/6244743211f01e/output
main.cpp: In function 'int main()':
main.cpp:13:10: error: invalid initialization of reference of type 'const Y&' from expression of type 'X'
     foo(x);
          ^
main.cpp:8:6: note: in passing argument 1 of 'void foo(const Y&)'
 void foo(Y const&){}
      ^
